--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.white-content {
+  color:beige;
+  background-color: #222;
+}
